--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="work-container" data-height="500">
+    <div class="header_event__first-3__desc" data-height="370">
         <h3>Heading</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
